--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   path: ^1.8.0
   permission_handler: ^8.1.6
   syncfusion_flutter_charts: ^19.1.61
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
